# oop_homeworklab4

./: CMakeLists.txt  README.md  array.hpp  figure.hpp  main.cpp  newmain.cpp  point.hpp  program  rectangle.hpp  square.hpp  tests.cpp  trapezoid.hpp
